# parallel-merging

./: CMakeLists.txt  Makefile  README.md  benchmark.sh  graph.c  graph.h  index.c  index.h  lib.c  lib.h  main.c  main.h  mpicomm  postprocess.py  preprocess.py  preprocess_all.sh
